# ai_client

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
lib/: .gitignore  aptinstall.sh  build_linux.sh  build_win.bat
src/Algorithm/: AsyncQueueProcessor.cpp  AsyncQueueProcessor.h  CircularBuffer.cpp  CircularBuffer.h
src/OpenAi/: OpenAiClient.cpp  OpenAiClient.h
src/asrlib/: AiClient.cpp  AiClient.h
src/audio/: AudioClient.cpp  AudioClient.h  WAVRW.md  WavHeader.h  WavReader.cpp  WavReader.h  WavWriter.cpp  WavWriter.h
src/http/: HttpClient.cpp  HttpClient.h
src/utils/extend/: Coding.cpp  Coding.h  Defer.cpp  Defer.h  File.cpp  File.h  Logger.cpp  Logger.h  Timer.cpp  Timer.h
